Изменил классы векторов, а так же добавил абстрактные классы Vector и Matrix из которых реализовываются остальные классы по типу Vector2f или Matrix3d. В каждый из классов векторов добавил следующие методы: -сумма векторов -разность -умножение на число -деление на число -скалярное произведение -Векторное произведение -Получение длины вектора -Нормализация вектора Т.к. методы реализованы в самих классах, то можно проделывать махинации типа vector1.add(vector2).cross(vector3).getLength - это пример. Для матриц добавлены следующие методы: -сумма матриц -разность матриц -умножение матриц -умножение матрицы на вектор столбец -транпонирование матрицы -получить матрицу из нулей -получить единичную матрицу все методы имплементированы, т.е. есть методы как для класса Vector2f, так и такие же для Vector3f и Vector4f. Чутка изменил какой-то класс с рендерингом, чтобы немного изменить им обращение к координатам вектора.

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,29 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.8.2</version>
+        </dependency>
     </dependencies>
 
     <build>
